css/nft-pok-page-desktop-all-breakpoints.css
/* ... */
.nft-pok-mobile .student-card-right-1 {
  height: 61px;
  left: 275px;
  object-fit: cover;
  position: absolute;
  top: 0;
  width: 45px;
}

.nft-pok-mobile .student-cards-to-delight-your-audience {
  left: 60px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  text-align: center;
  top: 20px;
  width: 214px;
}

.nft-pok-mobile .overlap-group2-1 {
  align-items: flex-end;
  background-color: var(--purple-mountains-majesty);
  border-radius: 10px;
  display: flex;
  height: 119px;
  margin-left: 4.82px;
  margin-top: 11px;
  min-width: 241px;
  padding: 6px 15px;
}

.nft-pok-mobile .build-own-your-com {
  letter-spacing: 0;
  line-height: 16.8px;
  min-height: 101px;
  text-align: center;
  text-shadow: 0px 4px 4px #00000040;
  width: 211px;
}

.nft-pok-mobile .span-4 {
  line-height: 7.2px;
}

.nft-pok-mobile .span-5 {
  line-height: 13.2px;
}

.nft-pok-mobile .overlap-group1-1 {
  align-items: flex-end;
  background-color: var(--purple-mountains-majesty);
  border-radius: 10px;
  display: flex;
  height: 119px;
  justify-content: flex-end;
  margin-left: 4.82px;
  margin-top: 26px;
  min-width: 241px;
  padding: 11px 12px;
}

.nft-pok-mobile .offer-perks-your-st {
  letter-spacing: 0;
  line-height: 16.8px;
  min-height: 96px;
  text-align: center;
  text-shadow: 0px 4px 4px #00000040;
  width: 216px;
}

.nft-pok-mobile .overlap-group-1 {
  align-items: flex-start;
  background-color: var(--purple-mountains-majesty);
  border-radius: 10px;
  display: flex;
  height: 119px;
  margin-left: 4.82px;
  margin-top: 26px;
  min-width: 241px;
  padding: 12px 14px;
}

.nft-pok-mobile .po-ks-increase-the-va-1 {
  letter-spacing: 0;
  line-height: 16.8px;
  min-height: 92px;
  text-align: center;
  text-shadow: 0px 4px 4px #00000040;
  width: 212px;
}

.nft-pok-mobile .group-nfts-to-sell-your-courses {
  align-items: flex-end;
  align-self: flex-start;
  display: flex;
  flex-direction: column;
  margin-left: -8px;
  margin-top: 84px;
  min-height: 514px;
  padding: 0 2px;
  width: 305px;
}

.nft-pok-mobile .overlap-group3 {
  align-self: center;
  height: 83px;
  margin-right: 3.0px;
  position: relative;
  width: 286px;
}

.nft-pok-mobile .business-lessons-card {
  height: 76px;
  left: 0;
  object-fit: cover;
  position: absolute;
  top: 0;
  width: 99px;
}

.nft-pok-mobile .nf-ts-to-sell-your-courses-anywhere {
  left: 53px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  text-align: center;
  top: 38px;
  width: 233px;
}

.nft-pok-mobile .sell-your-course-container {
  height: 120px;
  margin-right: 2px;
  margin-top: 25px;
  position: relative;
  width: 241px;
}

.nft-pok-mobile .rectangle {
  background-color: var(--purple-mountains-majesty);
  border: 1px none;
  border-radius: 10px;
  height: 119px;
  left: 0;
  position: absolute;
  top: 0;
  width: 241px;
}

.nft-pok-mobile .sell-your-course-nft {
  left: 13px;
  letter-spacing: 0;
  line-height: 16.8px;
  position: absolute;
  text-align: center;
  text-shadow: 0px 4px 4px #00000040;
  top: 9px;
  width: 216px;
}

.nft-pok-mobile .offer-perks-container {
  height: 124px;
  margin-right: 2px;
  margin-top: 24px;
  position: relative;
  width: 241px;
}

.nft-pok-mobile .offer-perks-your-st-1 {
  left: 4px;
  letter-spacing: 0;
  line-height: 16.8px;
  position: absolute;
  text-align: center;
  text-shadow: 0px 4px 4px #00000040;
  top: 12px;
  width: 234px;
}

.nft-pok-mobile .overlap-group-2 {
  align-items: flex-start;
  background-color: var(--purple-mountains-majesty);
  border-radius: 10px;
  display: flex;
  height: 119px;
  margin-top: 19px;
  min-width: 241px;
  padding: 13px 9px;
}

.nft-pok-mobile .po-ks-increase-the-va-2 {
  letter-spacing: 0;
  line-height: 16.8px;
  min-height: 87px;
  text-align: center;
  text-shadow: 0px 4px 4px #00000040;
  width: 222px;
}

.nft-pok-mobile .join-waitlist-and-submit {
  align-items: flex-start;
  display: flex;
  margin-left: 1.0px;
  margin-top: 18px;
  min-width: 121px;
}

.nft-pok-mobile .overlap-group-3 {
  align-items: flex-end;
  background-color: var(--fuchsia);
  border-radius: 10px;
  box-shadow: 0px 4px 4px #00000040 , 0px 4px 4px #00000040;
  display: flex;
  height: 25px;
  min-width: 121px;
  padding: 6.2px 6.9px;
}

.nft-pok-mobile .join-the-waitlist-1 {
  letter-spacing: 0;
  line-height: normal;
  min-height: 12px;
  text-align: center;
  width: 107px;
}

.nft-pok-mobile .group-master-wisdom {
  align-items: flex-start;
  align-self: flex-end;
  display: flex;
  margin-right: 10px;
  margin-top: 29px;
  min-width: 274px;
}

.nft-pok-mobile .overlap-group2-2 {
  height: 68px;
  position: relative;
  width: 274px;
}

.nft-pok-mobile .hi-i-am-master-wisd {
  left: 75px;
  letter-spacing: 0;
  line-height: 14.0px;
  mix-blend-mode: hard-light;
  position: absolute;
  text-shadow: 0px 4px 4px #00000040;
  top: 13px;
  width: 199px;
}

.nft-pok-mobile .mascot-no-background-1-at-footer {
  height: 68px;
  left: 0;
  object-fit: cover;
  position: absolute;
  top: 0;
  width: 76px;
}

.nft-pok-mobile .footer-mobile {
  align-items: flex-start;
  display: flex;
  height: 107px;
  margin-left: 4.0px;
  min-width: 322px;
}

.nft-pok-mobile .overlap-group-4 {
  align-items: center;
  background-color: var(--purple-mountains-majesty);
  display: flex;
  flex-direction: column;
  min-height: 107px;
  padding: 7px 0;
  width: 320px;
}

.nft-pok-mobile .owl-white-logo-1 {
  height: 16px;
  margin-left: 1.0px;
  object-fit: cover;
  width: 49px;
}

.nft-pok-mobile .overlap-group1-2 {
  height: 36px;
  margin-left: 1.0px;
  margin-top: 6px;
  position: relative;
  width: 319px;
}

.nft-pok-mobile .social-text {
  align-items: center;
  border: 1px none;
  display: flex;
  gap: 16px;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 22px;
  width: 319px;
}

.nft-pok-mobile .vector-86 {
  flex: 1;
  height: 1px;
  min-width: 118px;
}
/* ... */

